ipfs pinning service addition
